<resources>
    <string name="app_name">Food delivery</string>
    <string name="log_in">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="not_a_member">Not a member ?</string>
    <string name="join_now">Join Now</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="restaurant">Restaurants</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="coffee_shop">Coffee Shops</string>
    <string name="popular_food">Popular Food</string>
    <string name="view_all">View All</string>
    <string name="special_offers">Special Offers</string>
    <string name="_4_5">4.5</string>
    <string name="potato_egg">Potato - Egg</string>
    <string name="potato_egg_for_breakfast_give_you_power_potato_egg_for_breakfast_give_you_power">Potato - Egg for breakfast give you power, Potato - Egg for breakfast give you power</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="shipping_cart">Shipping Cart</string>
    <string name="profile">Profile</string>
    <string name="french_cuisine">French Cuisine</string>
    <string name="_40_60_min">40 – 60 min</string>
    <string name="_15_20_usd">15 – 20 USD</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="plus">+</string>
    <string name="_1">1</string>
    <string name="minus">-</string>
    <string name="_250g_125_cal">250g | 125 Cal</string>
    <string name="food_desc">Food Description Food Description Food Description Food Description Food Description Food Description</string>
    <string name="food_name">Food Name</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="my_profile">My Profile</string>
    <string name="mohamed_abaza">Mohamed Abaza</string>
    <string name="my_orders">My Orders</string>
    <string name="food_country">Food Country</string>
    <string name="food_time">Food time</string>
    <string name="food_price">Food Price</string>
    <string name="food_description">Food Description</string>
    <string name="food_rate">Food Rate</string>
    <string name="add_food">Add Food</string>
    <string name="get_started">Get Started...</string>
    <string name="title_activity_current_location">Map</string>
</resources>