<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        tools:context=".ui.activities.LoginActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:background="@drawable/login_bg"
            android:gravity="center|bottom"
            android:paddingBottom="32dp"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/email"
            android:textColorHint="#A6A6A6"
            app:boxBackgroundColor="@color/ui_white"
            app:boxCornerRadiusBottomEnd="12sp"
            app:boxCornerRadiusBottomStart="12sp"
            app:boxCornerRadiusTopEnd="12sp"
            app:boxCornerRadiusTopStart="12sp"
            app:boxStrokeColor="@color/ui_green"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="@color/ui_Black"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="Autofill" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/PasswordTextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/password"
            android:textColorHint="#A6A6A6"
            app:boxBackgroundColor="@color/ui_white"
            app:boxCornerRadiusBottomEnd="12sp"
            app:boxCornerRadiusBottomStart="12sp"
            app:boxCornerRadiusTopEnd="12sp"
            app:boxCornerRadiusTopStart="12sp"
            app:boxStrokeColor="@color/ui_green"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailTextInputLayout"
            app:startIconDrawable="@drawable/ic_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="textPassword"
                android:padding="12dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="@color/ui_Black"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="Autofill"
                tools:layout_editor_absoluteX="30dp"
                tools:layout_editor_absoluteY="372dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forgetPassword_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/forget_password"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/PasswordTextInputLayout" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/rounded_btn_bg"
            android:padding="8dp"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:backgroundTint="@color/ui_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgetPassword_tv" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/not_a_member"
                android:textColor="@color/ui_Black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/join_now_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/join_now"
                android:textColor="@color/ui_green"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>