<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        app:cardCornerRadius="25dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/foodImage"
                android:layout_width="160dp"
                android:layout_height="185dp"
                android:scaleType="fitXY"
                android:src="@drawable/dish_one"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/foodName_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:text="@string/potato_egg"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/foodDesc_tv"
                app:layout_constraintStart_toStartOf="@+id/foodImage" />

            <TextView
                android:id="@+id/foodDesc_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="24dp"
                android:padding="4dp"
                android:text="@string/potato_egg_for_breakfast_give_you_power_potato_egg_for_breakfast_give_you_power"
                android:textColor="@color/white"
                android:textSize="9sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/foodImage"
                tools:ignore="SmallSp" />

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:paddingTop="5dp"
                android:src="@drawable/star"
                app:layout_constraintEnd_toStartOf="@+id/rate_tv"
                app:layout_constraintTop_toBottomOf="@+id/foodDesc_tv"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/rate_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:padding="2dp"
                android:text="@string/_4_5"
                android:textColor="@color/white"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="@+id/foodDesc_tv"
                app:layout_constraintTop_toBottomOf="@+id/foodDesc_tv"
                tools:ignore="SmallSp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>